# DataVacuum

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.cfg
src/datavac/: __init__.py  cli.py  logging.py  maths.py  util.py
src/datavac/appserve/: OLDdvsecrets.py  ad_auth.py  api.py  app.py  auth.py  dbinfo.py  download_setup.py  dvsecrets.py  index.py  panel_serve.py  secrets.py  user_side.py
src/datavac/appserve/dvsecrets/: ak_client_side.py  ak_server_side.py  user_side.py
src/datavac/appserve/dvsecrets/vaults/: cyberark_vault.py  demo_vault.py  vault.py
src/datavac/appserve/secrets/: db_secrets.py  user_side.py
src/datavac/appserve/secrets/vault/: __init__.py  cyberark_vault.py  demo_vault.py
src/datavac/config/: cert_depo.py  contexts.py  data_definition.py  project_config.py  server_config.py
src/datavac/config/layout_params/: __init__.py  folder_layout_params.py
src/datavac/config/sample_splits/: __init__.py  folder_splits.py
src/datavac/database/: blob_store.py  db_cli.py  db_connect.py  db_create.py  db_get.py  db_modify.py  db_semidev.py  db_structure.py  db_upload.py  db_upload_meas.py  db_upload_other.py  db_util.py  postgresql_binary_format.py  postgresql_upload_utils.py
src/datavac/examples/: app_cv.py  app_idvg.py  app_tlm.py  app_with_prefilter.py  example_data.py  filter_plotter_layout.py
src/datavac/examples/apps/: app_cv.py  app_diemap.py  app_idvd.py  app_idvg.py  app_loader.py  app_tlm.py  app_with_prefilter.py  filter_plotter_layout.py
src/datavac/examples/data_mock/: mock_devices.py  mock_logic.py
src/datavac/examples/demo1/: __init__.py  demo1_dvconfig.py  demo1_example_data.py  dvconfig.py  example_data.py  layout_params.yaml  mock_devices.py  mock_logic.py
src/datavac/examples/demo1/config/: __init__.py  layout_params.yaml  project.yaml
src/datavac/examples/demo1/config/layout_params/: mask1_logic.csv  mask1_ros.csv  mask1_xtor.csv
src/datavac/examples/demo1/layout_params/: mask1_caps.csv  mask1_divs.csv  mask1_invs.csv  mask1_xtor.csv
src/datavac/examples/demo2/: __init__.py  demo2_dvconfig.py  dvconfig.py
src/datavac/examples/demo3/: __init__.py  demo3_dvconfig.py  demo3_example_data.py
src/datavac/gui/bokeh_util/: palettes.py  util.py  wafer.py
src/datavac/gui/panel_util/: filter_plotter.py  inst_params.py  selectors.py
src/datavac/gui/plot_templates/: diode_dciv.py  tlm_iv.py  xtor_cv.py  xtor_idvd.py  xtor_idvg.py  xtor_spar.py
src/datavac/io/: database.py  diemap.py  hose.py  layout_params.py  make_diemap.py  measurement_table.py  meta_reader.py  postgresql_binary_format.py  securepkl.py
src/datavac/jmp/: Addin.def  ConnectToWaferMap.jsl  ConnectToWafermap.jsl  DBConnect.jsl  ExcelSplitTables.jsl  JMP16Python.jsl  ReloadAddin.jsl  ScriptViewer.jsl  Secrets.jsl  SplitTables.jsl  Util.jsl  addin.jmpcust  addinLoad.jsl  compile_addin.py
src/datavac/jmp/scratch/: db_test.jsl  pysub_test.jsl
src/datavac/llm/: create_agent.py  llm_app.py
src/datavac/measurements/: __init__.py  capacitor.py  logic_cell.py  meas_util.py  measurement_group.py  measurement_type.py  reliability.py  sparameter.py  transistor.py  twopoint.py
src/datavac/tests/: conftest.py  freshtestdb.py  rerun_data.py  test_freshtestdb.py  test_logic_cell.py  test_measurement_table.py  test_transistor.py  test_util.py
src/datavac/trove/: __init__.py  classic_folder_trove.py  folder_aux_info.py  mock_trove.py  single_folder_trove.py  trove_util.py
src/datavac/util/: caching.py  cli.py  conf.py  dag.py  entrypoint.py  excel.py  lazydict.py  logging.py  maths.py  notebook.py  paths.py  rerun_data.py  tables.py  units.py  util.py
tests/: conftest.py  freshtestdb.py  rerun_data.py  test_measurement_table.py
tests/test_auth/: test_auth.py
tests/test_database/: test_db_modify.py
tests/test_demo1/: __init__.py  conftest.py  test_capacitor.py  test_logic_cell.py  test_transistor.py
tests/test_demo2/: conftest.py  test_demo2_all.py
tests/test_demo3/: conftest.py  test_demo3.py
tests/test_util/: test_util_dag.py  test_util_lazydict.py  test_util_maths.py
