[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datavac"
dynamic = ["version"]
authors = [
    {name = "Samuel James Bader", email = "samuel.james.bader@gmail.com"}
]
description = "Data analysis, flow, and visualization for semiconductor research projects"
readme = "README.md"

requires-python = ">=3.11.1"

dependencies = [
    # BSD-3-Clause license, no CVE risk as of 1/24/2023
    "scipy >= 1.10.0",
    # BSD-3-Clause license, no CVE risk as of 1/24/2023
    "numpy ~= 2.3.1",
    # BSD-3-Clause license, no CVE risk as of 1/24/2023
    # TODO: pandas 2.2 leads to some odd warnings about chained assignment when loading data
    #pandas >= 2.1.0
    "pandas == 2.2.3",

    # BSD-3-Clause license, need to avoid exposing to untrusted data
    # https://www.cve.org/CVERecord/SearchResults?query=scikit-learn
    "scikit-learn ~= 1.6.1",

    # BSD-3-Clause license, no CVE risk as of 11/16/2023 (searched "holoviz")
    "param ~= 2.2.0",
    # BSD-3-Clause license, no CVE risk as of 1/24/2023
    "panel == 1.7.5",
    # MIT license, no CVE risk as of 8/03/2025
    "watchfiles ~= 1.1.0",
    # BSD-3-Clause license, no CVE risk as of 1/24/2023
    "bokeh ~= 3.6.2",
    # custom PSF-based license (https://matplotlib.org/stable/project/license.html), no CVE risk as of 11/21/2024
    "matplotlib ~= 3.9.3",
    # MIT license, no CVE risk as of 12/31/2024
    "platformdirs >= 4.3.6",
    # Apache2 license,  no CVE risk as of 1/24/2023
    "aiofiles >= 22.1.0",
    # LGPL-3.0 license, no CVE risk as of 1/24/2023
    "aiopath >= 0.6.11",

    # BSD-2-Clause license, no CVE risk as of 1/24/2023
    "xlsxwriter >= 3.0.0",
    # MIT license, no CVE risk as of 1/24/2023
    "openpyxl >= 3.0.10",
    # MIT license,      no CVE risk as of 1/24/2023
    "python-slugify == 7.0.0",
    # MIT license, no CVE risk as of 2/1/2023
    "SQLAlchemy >= 2.0.0",
    # BSD-3-Clause license, no CVE risk as of 2/4/2023
    "h5py >= 3.8.0",

    "pint >= 0.24.4",

    # Public Domain + BSD license, no CVE risk as of 12/31/2024
    "pynacl >= 1.5.0",


    # BSD License (BSD-3-Clause), no CVE risk as of 1/10/2025
    "python-dotenv[cli]",

    # MIT License, no CVE risk as of 1/14/2025
    "bokeh_transform_utils"
]

[project.optional-dependencies]
postgresql = [
    # LGPL-3 license, no CVE risk as of 1/24/2023
    "psycopg2 >= 2.9.5"
]
#asyncpg >= 0.28.0
postgresql_no_pg_config = [
    # use this instead of the above on certain machines where it's difficult to install pg_config
    # this is my default
    "psycopg2-binary"
]
kerberos_serverside = [
    # To use kerberos (authenticating datavacuum user to the server)
    "kerberos"
]
kerberos_clientside = [
    # To use kerberos (authenticating datavacuum user to the server)
    "requests-kerberos"
]
test = [
    "pytest",
    "pytest-dotenv",
    "pytest-env",
]

[project.scripts]
datavac = "datavac.util.cli:entrypoint_datavac_cli"
datavac_with_context = "datavac.config.contexts:cli_datavac_with_context"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
datavac = ["**/*.jsl","**/*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "datavac.__version__"}